# stm32f072-usb-test

./: Cargo.toml  dfu.sh  memory.x
.cargo/: config
src/: hiddesc.rs  main.rs
src/hid/: hid.rs  mod.rs  reportdesc.rs
